<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="app_title">Shopping Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_now">Buy Now</string>
    <string name="cart_title">Shopping Cart</string>
    <string name="remove">Remove</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="clear_cart">Clear</string>
    <string name="checkout_title">Order Details</string>
    <string name="delivery_addresss">Delivery Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="price_details">Price Details</string>
    <string name="place_order">Place Order</string>
    <string name="no_items">Your cart is empty</string>
</resources>