<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="model"
            type="com.s3enterprises.shoppingapp.MainActivityViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".CartFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:tint="?android:textColorPrimary"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/clear_all_button"
            app:layout_constraintBottom_toBottomOf="@id/clear_all_button"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/cart_title"
            android:textAllCaps="false"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/total_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/checkout_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/cart_total"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/total_label"
            app:layout_constraintTop_toTopOf="@id/total_label"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="$ 3131"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@{`$ `+String.valueOf(model.cartTotal)}"
            />

        <TextView
            android:id="@+id/clear_all_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:text="@string/clear_cart"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:onClick="@{()->model.clearCart()}"
            android:textColor="?android:textColorPrimary"
            android:drawablePadding="10dp"
            android:gravity="center"
            app:drawableStartCompat="@drawable/ic_baseline_delete_sweep_24"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/clear_all_button"
            app:layout_constraintBottom_toTopOf="@id/total_label"
            android:padding="10dp"
            />

        <Button
            android:id="@+id/checkout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:text="@string/checkout"
            android:fontFamily="sans-serif"
            android:enabled="@{model.cartCount>0}"
            android:background="@drawable/button_background"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

