<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.s3enterprises.shoppingapp.MainActivityViewModel" />
        <variable name="address" type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CheckoutFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:tint="?android:textColorPrimary"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="10dp"
            />


        <TextView
            android:id="@+id/header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/back_button"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/checkout_title"
            android:textAllCaps="false"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/header_txt"
            app:layout_constraintBottom_toTopOf="@+id/place_order_button"
            android:paddingBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:textColorPrimary"
                    android:layout_margin="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textAllCaps="true"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/price_details"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Price"
                        android:textColor="?android:textColorPrimary"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?android:textColorPrimary"
                        android:textStyle="bold"
                        tools:text="$ 1324"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Shipping Charges"
                        android:textColor="?android:textColorPrimary"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_green_dark"
                        android:textStyle="bold"
                        android:text="FREE"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Total"
                        android:textColor="?android:textColorPrimary"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?android:textColorPrimary"
                        android:textStyle="bold"
                        tools:text="$ 1324"
                        />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:textColorPrimary"
                    android:layout_margin="5dp"
                    />


                <TextView
                    android:id="@+id/delivery_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_addresss"
                    android:layout_margin="20dp"
                    android:textAllCaps="true"
                    android:textColor="?android:textColorPrimary"
                    />

                <EditText
                    android:id="@+id/delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@={address}"
                    android:inputType="textPersonName"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:textColorPrimary"
                    android:layout_margin="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:textAllCaps="true"
                    android:textColor="?android:textColorPrimary"
                    android:text="@string/order_summary"
                    />

                <LinearLayout
                    android:id="@+id/summry_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp"
                    />



            </LinearLayout>

        </ScrollView>


        <Button
            android:id="@+id/place_order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:text="@string/place_order"
            android:fontFamily="sans-serif"
            android:background="@drawable/button_background"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
